Closed
Bug 608662
Opened 15 years ago
Closed 15 years ago
Crash [@ nsDSURIContentListener::CheckFrameOptions(nsIRequest*) ] [@ nsDocument::CheckFrameOptions() ][@ nsDSURIContentListener::CheckFrameOptions ]
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
Firefox 4.0
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
| blocking1.9.2 | --- | .13+ |
| status1.9.2 | --- | .13-fixed |
| status1.9.1 | --- | unaffected |
People
(Reporter: alice0775, Assigned: bsterne)
References
()
Details
(Keywords: crash, regression, reproducible)
Crash Data
Attachments
(2 files, 1 obsolete file)
|
1.12 KB,
patch
|
jst
:
review+
|
Details | Diff | Splinter Review |
|
712 bytes,
patch
|
bsterne
:
review+
dveditz
:
approval1.9.2.13+
|
Details | Diff | Splinter Review |
Build Identifier:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101031 Firefox/4.0b8pre ID:20101031041924
Setup external editor and view page source on add-ons page,
then browser crashes
It crashes regardless of the kind of the editor.
bp-1c91ed3e-638f-4da1-ba06-737892101031
bp-01b238ee-4536-48e8-8bb7-cf6522101031
bp-97b2af64-a22f-4440-a5f9-b9d572101031
3.6.x also crashes.
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.13pre) Gecko/20101027 Namoroka/3.6.13pre ID:20101027043052
bp-d1b411df-0963-4597-a57f-7a74f2101031
bp-0cd12177-c86d-47cd-a90a-8818f2101031
bp-63e4f4b0-6617-4f0f-a1f2-fee0e2101031
Reproducible: Always
Steps to Reproduce:
1. Start Minefield with new profile
2. Setup external editor with about:config.
view_source.editor.external, true
view_source.editor.path, C:\windows\system32\notepad.exe
3. Open URL ( https://addons.mozilla.org )
4. View Page Source (Ctrl + U)
Actual Results:
Crash with Crash reports
Expected Results:
No crash.
| Reporter | ||
Updated•15 years ago
|
blocking1.9.1: --- → ?
blocking1.9.2: --- → ?
blocking2.0: --- → ?
Target Milestone: --- → Firefox 4.0
| Reporter | ||
Comment 1•15 years ago
|
||
Regression window for m-c:
Works:
http://hg.mozilla.org/mozilla-central/rev/ded4af44f4aa
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101014 Firefox/4.0b8pre ID:20101014154607
Fails:
http://hg.mozilla.org/mozilla-central/rev/83a06cce6b14
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101014 Firefox/4.0b8pre ID:20101014164613
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=ded4af44f4aa&tochange=83a06cce6b14
Candidate Bug:
c5494ee56c47 Brandon Sterne — Bug 561051 - make CSP frame-ancestors and X-Frame-Options work with viewSourceChannels, a=jst
Regression window for 3.6.x:
Works:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/02c086d3f933
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.9pre) Gecko/20100816 Namoroka/3.6.9pre ID:20100816042026
Fails:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/fe2f80c3a6b6
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.9pre) Gecko/20100817 Namoroka/3.6.9pre ID:20100817042026
Pushlog:
http://hg.mozilla.org/releases/mozilla-1.9.2/pushloghtml?fromchange=02c086d3f933&tochange=fe2f80c3a6b6
Candidate Bug:
6405b19fc58f Brandon Sterne — Bug 586891 - Make X-Frame-Options work with view-source: channel, r=dwitte, a=LegNeato
FYI, Firefox3.5.x does not crash.
| Reporter | ||
Comment 2•15 years ago
|
||
The browser crashes on Linux too.
bp-f21b86a6-3b50-4b60-b1d3-5b83e2101101
http://hg.mozilla.org/mozilla-central/rev/f4ea6992e1c6
Mozilla/5.0 (X11; Linux i686; rv:2.0b8pre) Gecko/20101101 Firefox/4.0b8pre ID:20101101025859
bp-fafc58c6-05e9-46ca-8fb5-bcdea2101101
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/b3d441310e5c
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.13pre) Gecko/20101101 Firefox/3.6.13pre ID:20101101034551
OS: Windows 7 → All
Summary: Crash [@ nsDSURIContentListener::CheckFrameOptions(nsIRequest*) ] [@ nsDocument::CheckFrameOptions() ] → Crash [@ nsDSURIContentListener::CheckFrameOptions(nsIRequest*) ] [@ nsDocument::CheckFrameOptions() ][@ nsDSURIContentListener::CheckFrameOptions ]
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → bsterne
| Assignee | ||
Comment 3•15 years ago
|
||
We can just return early and allow the load if mDocShell doesn't have a DOMWindow associated with it since there is nothing to click in such a window.
Attachment #487346 -
Flags: review?(jst)
Comment 4•15 years ago
|
||
Apparently this is a trivial fix and we have a patch ready. Not technically a blocker but we are waiting for approval for 2.0.
Updated•15 years ago
|
Keywords: reproducible
Updated•15 years ago
|
Attachment #487346 -
Flags: review?(jst) → review+
Updated•15 years ago
|
blocking2.0: ? → final+
| Assignee | ||
Comment 5•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•15 years ago
|
||
Attachment #488544 -
Flags: approval1.9.2.13?
Comment on attachment 488544 [details] [diff] [review]
1.9.2 patch
a=LegNeato on 1.9.2.13
Attachment #488544 -
Flags: approval1.9.2.13? → approval1.9.2.13+
| Assignee | ||
Comment 8•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
status1.9.2:
--- → .13-fixed
| Assignee | ||
Comment 9•15 years ago
|
||
This regressed on 1.9.2 due to the checking of bug 581226 which moved a bunch of X-Frame-Options code from nsDocument to nsDSURIContentListener, but which did not have the null check that the patch in this bug added. I'm marking this not-fixed for 1.9.2 and I'll make a patch to re-fix it momentarily. We'll need to get this in before we go to build in 2 days.
| Assignee | ||
Comment 10•15 years ago
|
||
Refix this on 1.9.2 after bug 581226 checkin.
Attachment #488544 -
Attachment is obsolete: true
Attachment #491874 -
Flags: review+
Attachment #491874 -
Flags: approval1.9.2.13?
Comment 11•15 years ago
|
||
Comment on attachment 491874 [details] [diff] [review]
1.9.2 patch redux
Approved for 1.9.2.13, a=dveditz
Attachment #491874 -
Flags: approval1.9.2.13? → approval1.9.2.13+
Comment 12•15 years ago
|
||
status1.9.1:
--- → unaffected
Updated•14 years ago
|
Crash Signature: [@ nsDSURIContentListener::CheckFrameOptions(nsIRequest*) ]
[@ nsDocument::CheckFrameOptions() ]
[@ nsDSURIContentListener::CheckFrameOptions ]
You need to log in
before you can comment on or make changes to this bug.
Description
•