Bug 608662 - Fix X-Frame-Options crash when external view-source editor is set, r=jst, a=LegNeato