content/base/src/nsDocument.cpp
@@ -2280,6 +2280,10 @@ nsresult nsDocument::CheckFrameOptions()
     // document must be same-origin with top window.  X-F-O: DENY requires that
     // the document must never be framed.
     nsCOMPtr<nsIDOMWindow> thisWindow = do_GetInterface(docShell);
+    // If we don't have DOMWindow there is no risk of clickjacking
+    if (!thisWindow)
+      return true;
+
     nsCOMPtr<nsIDOMWindow> topWindow;
     thisWindow->GetTop(getter_AddRefs(topWindow));
 
